# video_to_md

./: .editorconfig  .gitattributes  .gitignore  IMPROVEMENT.md  README.md  config.py  prototype.html  pyproject.toml  start.bat  start.ps1  stop.bat  stop.ps1  把项目推送到GitHub教程.md
scripts/: bootstrap.ps1  rebuild.py
v2md/: __init__.py  ai.py  ai_enhance.py  downloader.py  frames.py  markdown.py  models.py  notes.py  pipeline.py  subtitle.py  translator.py
web/: __init__.py  app.py
web/templates/: index.html
